# pydowl

./: .gitignore  AGENTS.md  ci_local.sh  mypy.ini  pyproject.toml  readme.md  registry.md
docs/: virtuoso.md
docs/float/: pydowl.drawio
pydowl/: __init__.py  base_class.py  data_type.py  field_type.py  version.py
pydowl/sparql/: __init__.py  endpoint.py  pull.py  push.py  settings.py  utils_azure.py
tests/: conftest.py  example_test_env.env  test_azure.py  test_datatypes_and_holder.py  test_fieldtypes_pydantic_core_registry.py  test_mongo_dataclass_roundtrip.py  test_mongo_json_dataclass_and_registry.py  test_owl_and_integration.py  test_push_owlready_merge.py  test_sparql.py  test_sparql_large_node.py  test_sparql_pull.py  test_sparql_push.py
tests/fixtures/: plant_schema.py  sparql_fixtures.py
